--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2021 Coding SDN. All right reserved</p>
+        <p class="footer__copy">&#169; 2021 Coding SDN [Steeve Dimitry Nana]. All right reserved</p>
     </footer>
 
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
