--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ----------------------- Boxicons.css ----------------------- -->
-    <link href='https://unpkg.com/boxicons@2.0 .9/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <!-- ----------------------- style.css ----------------------- -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- ----------------------- favicon ----------------------- -->
@@ -212,13 +212,13 @@
 
         <p class="footer__copy">&#169; 2021 Coding SDN [Steeve Dimitry Nana]. All right reserved</p>
     </footer>
-    
+
 </body>
 
-    <!-- ----------------------- Scroll-reveal.js ----------------------- -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- ----------------------- Boxicons.js ----------------------- -->
-    <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
+<!-- ----------------------- Scroll-reveal.js ----------------------- -->
+<script src="https://unpkg.com/scrollreveal"></script>
+<!-- ----------------------- Boxicons.js ----------------------- -->
+<script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
     <!-- ----------------------- main.js ----------------------- -->
     <script src="assets/js/main.js"></script>
     
