--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     
     <!-------------------------- Header -------------------------->
 
-    <header class="l-header scroll-header" id="header">
+    <header class="l-header" id="header">
         <nav class="nav bd-container">
             <a href="#" class="nav__logo">Christmas Gift</a>
 
